--- a/style.css
+++ b/style.css
@@ -52,8 +52,9 @@ body {
     font-weight: 600;
     cursor: default;
 }
+
 .header.sticky {
-    border-radius: .1rem solid rgba(0,0,0, .2);
+    border-radius: .1rem solid rgba(0, 0, 0, .2);
 }
 
 .navbar a {
@@ -79,7 +80,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-  
+
 }
 
 #home-img img {
@@ -88,13 +89,16 @@ body {
     border-radius: 50%;
     animation: floatImage 4s ease-in-out infinite;
 }
+
 @keyframes floatImage {
     0% {
         transform: translateY(0);
     }
+
     50% {
         transform: translateY(-2.4rem);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -104,12 +108,15 @@ body {
     font-size: 3.2rem;
     font-weight: 700;
 }
+
 .home-content h3:nth-last-of-type(2) {
     margin-bottom: 2rem;
 }
+
 span {
     color: var(--main-color);
 }
+
 .home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
@@ -119,6 +126,7 @@ span {
 .home-content p {
     font-size: 1.3rem;
 }
+
 .social-media a {
     display: inline-flex;
     justify-content: center;
@@ -133,11 +141,13 @@ span {
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
 }
+
 .social-media a:hover {
     background-color: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem;
 }
+
 .btn {
     display: inline-block;
     padding: 1rem 2.8rem;
@@ -150,9 +160,11 @@ span {
     font-weight: 600;
     transition: .5s ease;
 }
+
 .btn:hover {
     box-shadow: none;
 }
+
 #about {
     display: flex;
     justify-content: center;
@@ -167,29 +179,34 @@ span {
     height: 300px;
     border-radius: 50%;
 }
+
 .heading {
     text-align: center;
     font-size: 4.5rem;
 }
+
 .about-content h2 {
     text-align: left;
     line-height: 1.2rem;
     margin-bottom: 1rem;
 }
+
 .about-content h3 {
     font-size: 2.6rem;
 }
-    
+
 .about-content p {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
+
 .portfolio {
     background: var(--bg-color);
 }
+
 .portfolio h2 {
     margin-bottom: 4rem;
-}   
+}
 
 .portfolio-container {
     display: grid;
@@ -209,7 +226,7 @@ span {
 
 .portfolio-box img {
     width: 100%;
-    height: 450px;
+    height: 400px;
     margin: 0;
     object-fit: cover;
     object-position: center;
@@ -219,6 +236,7 @@ span {
 .portfolio-box:hover img {
     transform: scale(1.1);
 }
+
 .portfolio-box .portfolio-layer {
     position: absolute;
     bottom: 0;
@@ -226,7 +244,7 @@ span {
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -235,16 +253,20 @@ span {
     transform: translateY(100%);
     transition: .5s ease;
 }
+
 .portfolio-box:hover .portfolio-layer {
-    transform: translateY(0); 
+    transform: translateY(0);
 }
+
 .portfolio-layer h4 {
     font-size: 3rem;
 }
+
 .portfolio-layer p {
     font-size: 1.6rem;
     margin: .3rem 0 1rem;
 }
+
 .portfolio-layer a {
     display: inline-flex;
     justify-content: center;
@@ -254,14 +276,56 @@ span {
     background: var(--text-color);
     border-radius: 50%;
 }
+
 .portfolio-layer a i {
     font-size: 2rem;
     color: var(--second-bg-color);
 }
+
 .contact h2 {
     margin-bottom: 3rem;
 }
-.contact form {
+
+.contact {
+    background: var(--second-bg-color);
+}
+
+.contact-info {
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    /* Ställ in element i kolumn */
+    align-items: center;
+    /* Centrera horisontellt */
+}
+
+.contact-info li {
+    margin-bottom: 10px;
+    /* Lägg till lite mellanrum mellan listelementen */
+}
+
+.tech-stack {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 30px 0;
+}
+
+.tech-stack img {
+    height: 50px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.tech-stack img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(0, 171, 240, 0.5);
+}
+
+
+
+
+/*.contact form {
     max-width: 70rem;
     margin: 1rem auto;
     text-align: center;
@@ -295,6 +359,7 @@ span {
     margin-top: 2rem;
     cursor: pointer;
 }
+*/
 .footer {
     display: flex;
     justify-content: space-between;
@@ -303,9 +368,11 @@ span {
     padding: 2rem 9%;
     background: var(--bg-color);
 }
+
 .footer-text p {
     font-size: 1.6rem;
 }
+
 .footer-iconTop a {
     display: inline-flex;
     justify-content: center;
@@ -315,110 +382,136 @@ span {
     border-radius: .8rem;
     transition: .5s ease;
 }
+
 .footer-iconTop a:hover {
     box-shadow: 0 0 1rem var(--main-color);
 }
+
 .footer-iconTop a i {
     font-size: 2.4rem;
     color: var(--second-bg-color);
 }
-@media (max-width:1200px){
+
+@media (max-width:1200px) {
     html {
         font-size: 55%;
     }
 }
-@media (max-width:991px){
+
+@media (max-width:991px) {
     .header {
         padding: 2rem 3%;
     }
+
     .section {
         padding: 10rem 3% 2rem;
     }
-    .portfolio{
+
+    .portfolio {
         padding-bottom: 7rem;
     }
+
     .contact {
         min-height: auto;
     }
-    .footer{
+
+    .footer {
         padding: 2rem 3%;
     }
 }
-@media (max-width: 768px){
-    #menu-icon{
+
+@media (max-width: 768px) {
+    #menu-icon {
         display: block;
     }
-    
-    .navbar{
+
+    .navbar {
         position: absolute;
         top: 100%;
-        left:  0;
+        left: 0;
         width: 100%;
         padding: 1rem 3%;
         background: var(--bg-color);
-        border-top: 1rem solid rgba(0,0,0, .2);
-        box-shadow: 0 .5rem 1rem rgba(0,0,0, .2);
+        border-top: 1rem solid rgba(0, 0, 0, .2);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
         display: none;
     }
+
     .navbar.active {
         display: block;
     }
+
     .navbar a {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
     }
-    .home{
+
+    .home {
         flex-direction: column;
     }
+
     .home-content h3 {
         font-size: 2.6rem;
     }
+
     .home-content h1 {
         font-size: 5rem;
     }
+
     .home-img img {
         width: 70vw;
         margin-top: 4rem;
     }
-    .about{
+
+    .about {
         flex-direction: column-reverse;
     }
+
     .about img {
         width: 70vw;
         margin-top: 4rem;
     }
+
     .portfolio h2 {
         margin-bottom: 3rem;
     }
-    .portfolio-container{
+
+    .portfolio-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media (max-width: 617px){
-    .portfolio-container{
+
+@media (max-width: 617px) {
+    .portfolio-container {
         grid-template-columns: 1fr;
     }
 }
-@media (max-width: 450px){
+
+@media (max-width: 450px) {
     html {
         font-size: 50%;
     }
+
     .contact form .input-box input {
         width: 100%;
     }
 }
-@media (max-width: 365px){
+
+@media (max-width: 365px) {
     .home-img img {
         width: 90vw;
     }
+
     .about-img img {
         width: 90vw;
     }
+
     .footer {
         flex-direction: column-reverse;
     }
-    .footer p{
+
+    .footer p {
         text-align: center;
         margin-top: 2rem;
     }
